--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -28,7 +28,7 @@
     </div>
   </div>
 </div>
-<div class="portal">
+<div class="portal" id="portal">
   <%= render({:partial=>"irm/home/portal",:locals=>{:pconfig=>pconfig}}) %>
 </div>
 
