--- a/app/views/irm/mail_templates/_new_form.html.erb
+++ b/app/views/irm/mail_templates/_new_form.html.erb
@@ -135,7 +135,7 @@
     </table>
   </div>
 <% end %>
-
+<% require_js_css(:aceditor) %>
 <script type="text/javascript">
   window.onload = function() {
     var editor = ace.edit("editor");
