--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1162,6 +1162,13 @@ div.min-block-body {
     background-color: #fff;
 }
 
+.datatable table tr.no-data div{
+    text-align: center;
+}
+.table-placeholder{
+    min-height: 55px;
+}
+
 //================datatable paginator
 @pagiantorFirstPagePath: asset-path('framework/page-first.gif');
 @pagiantorFirstPageDisabledPath: asset-path('framework/page-first-disabled.gif');
