--- a/app/views/icm/incident_requests/_quick_create.html.erb
+++ b/app/views/icm/incident_requests/_quick_create.html.erb
@@ -22,7 +22,7 @@
                 <label for="ass_external_system"><%=t(:label_icm_incident_request_target_system)%><%= required_icon %></label>
             <% if allow_to_function?(:create_icdt_rqst_for_other) %>
                 <%=f.select :external_system_id,nullable_options_for_select([], nil),{},
-                        {:id=>"ass_external_system",
+                        {:id=>"ass_external_system",:required=>true,
                          :depend=>"incident_request_requested_by",
                          :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                          :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"${incident_request_requested_by}")}%>
@@ -30,7 +30,7 @@
                 <%=f.select :external_system_id,
                         nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.id]},nil),
                         {},
-                        {:id=>"ass_external_system",
+                        {:id=>"ass_external_system",:required=>true,
                          :depend=>"incident_request_requested_by",
                          :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                          :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"${incident_request_requested_by}")}%>
@@ -39,11 +39,11 @@
 
             <div class="quick-create-field">
               <label for="incident_request_title"><%=t(:label_icm_incident_request_title)%><%= required_icon %></label>
-              <%=f.text_field :title,:style => "width:175px;",:id=>"incident_request_title"%>
+              <%=f.text_field :title,:style => "width:175px;",:id=>"incident_request_title",:required=>true%>
             </div>
             <div class="quick-create-field">
               <label for="incident_request_summary"><%=t(:label_icm_incident_request_summary)%><%= required_icon %></label>
-              <%=f.text_area :summary,:rows=>3, :style => "width:175px;" ,:id=>"incident_request_summary"%>
+              <%=f.text_area :summary,:rows=>3, :style => "width:175px;" ,:id=>"incident_request_summary",:required=>true%>
             </div>
             <div class="quick-create-field">
               <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
