--- a/app/views/irm/todo_events/edit_recurrence.html.erb
+++ b/app/views/irm/todo_events/edit_recurrence.html.erb
@@ -143,7 +143,7 @@
     else if(freq == "MONTHLY"){
         Y.one("#rm").set("checked", "checked");
         Y.one("#m").setStyle("display", "");
-        if(byday.length > 2 && ["SU","MO","TU","WE","TH","FR","SA"].indexOf(byday.substring(byday.length - 2, byday.length)) >= 0){
+        if(byday.length > 2 && $.inArray(byday.substring(byday.length - 2, byday.length),["SU","MO","TU","WE","TH","FR","SA"]) >= 0){
             Y.one("#recm_WEEK").set("checked", "checked");
             if(interval == "") {
                 Y.one("#recurrence_on_every_month_1").set("value", "1");
