--- a/app/views/irm/mail_templates/_edit_form.html.erb
+++ b/app/views/irm/mail_templates/_edit_form.html.erb
@@ -170,7 +170,7 @@
   </div>
 <% end %>
 
-<% require_js_css(:aceditor) %>
+<% require_jscss(:aceditor) %>
 <script type="text/javascript">
   $(document).ready(function(){
       var languages = [];
