--- a/app/views/irm/reports/_show_report_actions.html.erb
+++ b/app/views/irm/reports/_show_report_actions.html.erb
@@ -1,47 +1,38 @@
-<div class="as-button" >
-    <span id="runSubmit" class="menuButton">
-      <div  class="menuLabel">
-        <span><a><%= t(:label_irm_report_run)  %></a></span>
-      </div>
-      <div class="menuContent">
-        <div class="menuItem"><%= link_to(t(:label_irm_report_run_immediate),{:action => "run",:back_url=>url_for({})},:class=>"submit") %></div>
-        <div class="menuItem"><%= link_to(t(:label_irm_report_run_schedule),{:controller => "irm/report_triggers",:action => "new",:report_id=>@report.id,:back_url=>url_for({})}) %></div>
-      </div>
-    </span>
-    <script type="text/javascript">
-      $(document).ready(function(){
-          $("#runSubmit").menubutton();
-      });
-    </script>
-</div>
-<% if @report.editable(@report[:access_type],@report[:member_type],Irm::Person.current.id) %>
-    <% if @report.custom? %>
-      <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @report.id}%></div>
-    <% else %>
-      <div class="button"><%= link_to t(:edit), {:action => "edit_program", :id => @report.id}%></div>
+<div class="btn-toolbar">
+    <div class="btn-group">
+      <button class="btn btn-primary"><%= t(:label_irm_report_run)  %></button>
+      <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+      <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><%= link_to(t(:label_irm_report_run_immediate),{:action => "run",:back_url=>url_for({})},:class => "submit") %></li>
+        <li><%= link_to(t(:label_irm_report_run_schedule),{:controller => "irm/report_triggers",:action => "new",:report_id=>@report.id,:back_url=>url_for({})}) %></li>
+      </ul>
+    </div>
+
+    <% if @report.editable(@report[:access_type],@report[:member_type],Irm::Person.current.id) %>
+        <% if @report.custom? %>
+          <div class="btn-group"><%= link_to t(:edit), {:action => "edit", :id => @report.id},:class => "btn"%></div>
+        <% else %>
+          <div class="btn-group"><%= link_to t(:edit), {:action => "edit_program", :id => @report.id},:class => "btn"%></div>
+        <% end %>
+      <div class="btn-group"><%= link_to t(:label_irm_report_apply_params), {:action => "run", :id => @report.id,:apply=>true},:class=>"btn submit"%></div>
     <% end %>
-    <div class="button"><%= link_to t(:label_irm_report_apply_params), {:action => "run", :id => @report.id,:apply=>true},:class=>"submit"%></div>
-<% end %>
-<% if @report.custom? %>
-    <div class="button"><%= link_to t(:label_irm_report_custom), {:action => "edit_custom"},{:class=>"submit"} %></div>
-<% else %>
-    <div class="button"><%= link_to t(:label_irm_report_custom), {:action => "edit_custom_program"},{:class=>"submit"} %></div>
-<% end %>
-<div class="as-button" >
-    <span id="newReport" class="menuButton">
-      <div  class="menuLabel">
-        <span><a><%= t(:new)  %></a></span>
-      </div>
-      <div class="menuContent">
-        <div class="menuItem"><%= link_to(t(:label_irm_report_new_custom),{:action => "new",:back_url=>url_for({})}) %></div>
-        <div class="menuItem"><%= link_to(t(:label_irm_report_new_program),{:action => "new_program",:back_url=>url_for({})}) %></div>
-      </div>
-    </span>
-    <script type="text/javascript">
-      $(document).ready(function(){
-          $("#newReport").menubutton();
-      });
-    </script>
+    <% if @report.custom? %>
+      <div class="btn-group"><%= link_to t(:label_irm_report_custom), {:action => "edit_custom"},{:class=>"submit btn"} %></div>
+    <% else %>
+      <div class="btn-group"><%= link_to t(:label_irm_report_custom), {:action => "edit_custom_program"},{:class=>"submit btn"} %></div>
+    <% end %>
+    <div id="newReport" class="btn-group">
+      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+        <%= t(:new)  %>
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><%= link_to(t(:label_irm_report_new_custom),{:action => "new"}) %></li>
+        <li><%= link_to(t(:label_irm_report_new_program),{:action => "new_program",:back_url=>url_for({})}) %></li>
+      </ul>
+    </div>
+    <div class="btn-group"><%= link_to t(:export), {:action => "run", :id => @report.id,:format=>:xls},:id=>"exportReport",:class=>"btn submit",:target=>"_blank"%></div>
+    <div class="btn-group"><%= link_to t(:back), {:action => "index"},:class => "btn cancel"%></div>
 </div>
-<div class="button"><%= link_to t(:export), {:action => "run", :id => @report.id,:format=>:xls},:id=>"exportReport",:class=>"submit",:target=>"_blank"%></div>
-<div class="button"><%= link_to t(:back), {:action => "index"}%></div>
