--- a/app/views/irm/reports/get_data.html.erb
+++ b/app/views/irm/reports/get_data.html.erb
@@ -1,8 +1,8 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:name,{:title=>t(:label_irm_report_name),:searchable=>true,:width=>"250px"}) do |data|%>
-    <% if data[:report_trigger_id].eql?('') %>
+    <% if data[:report_trigger_id].present? %>
       <%= link_to(data[:name], {:controller => "irm/reports", :action => "show", :id => data[:id]})%>
-            <%=link_to(content_tag(:img,nil,:src=>theme_image_path("s.gif"),:class=>"scheduled-icon"),{:controller=>"irm/report_triggers",:action=>"edit",:id=>data[:report_trigger_id]}) %>
+      <%= bootstrap_icons("icon-time",t(:edit),{:controller=>"irm/report_triggers",:action=>"edit",:id=>data[:report_trigger_id]}) %>
     <% else %>
       <%= link_to(data[:name], {:controller => "irm/reports", :action => "show", :id => data[:id]})%>
     <% end %>
