--- a/app/views/irm/reports/_custom_report_params.html.erb
+++ b/app/views/irm/reports/_custom_report_params.html.erb
@@ -1,11 +1,11 @@
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table" id="baseFilter">
   <tbody>
     <tr>
       <% param_criterions.each do |param_criterion| %>
           <% next unless param_criterion.field_id.present? %>
-          <td>
+          <td >
             <label for="<%=param_criterion.id %>_label"><b><%= param_criterion[:name] %></b>[<%= param_criterion[:operator_meaning] %>]</label>
-            <div style="white-space:nowrap">
+            <div style="white-space:nowrap" class="form-inline">
               <% if param_criterion[:relation_bo_id].present? %>
                 <%= lov_field_tag("program_params[#{param_criterion.field_id}]",param_criterion[:relation_bo_id],{:id_type=>true,:id=>param_criterion.id,:value_field=>param_criterion[:relation_object_attribute_name],:value=>program_params["#{param_criterion.field_id}"]}) %>
               <% else %>
@@ -16,7 +16,7 @@
       <% end %>
       <td>
         <fieldset>
-          <legend>
+          <legend class="btn disabled">
             <%= t(:label_irm_report_time_range) %>
           </legend>
           <table>
@@ -29,11 +29,11 @@
             <tr>
               <td>
                 <label for="filterDateFrom"><%= t(:label_irm_report_filter_date_from) %></label>
-                <%= f.text_field(:filter_date_from,:value=>calendar_date(@filter_date_from),:id=>"filterDateFrom",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= f.date_field(:filter_date_from,:value=>calendar_date(@filter_date_from),:id=>"filterDateFrom",:size=>12,:class=>"date",:nobutton=>true)%>
               </td>
               <td>
                 <label for="filterDateTo"><%= t(:label_irm_report_filter_date_to) %></label>
-                <%= f.text_field(:filter_date_to,:value=>calendar_date(@filter_date_to),:id=>"filterDateTo",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= f.date_field(:filter_date_to,:value=>calendar_date(@filter_date_to),:id=>"filterDateTo",:size=>12,:class=>"date",:nobutton=>true)%>
               </td>
             </tr>
           </table>
