--- a/app/views/irm/reports/_edit_custom_step_2.html.erb
+++ b/app/views/irm/reports/_edit_custom_step_2.html.erb
@@ -1,82 +1,88 @@
-<style type="text/css">
-  .floatLeft{
-      float:left;
-  }
-</style>
-<%= form_for(@report,:url=>{:action=>"edit_custom"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@report,:url=>{:action=>"edit_custom"},:builder => CustomFormBuilder) do |f| %>
 <%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-  <%= render :partial => "step_header",:locals => {:step=>@report.step} %>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <h3><%= t(:label_irm_report_step_base_info) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol"><label><%=t(:label_irm_report_report_type)%></label></td>
-                      <td class="dataCol"><label><%=@report[:report_type_name]%></label></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
-                      <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_code"%></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
-                      <td class="dataCol"><%=f.text_field :name,:value=>@report[:name], :required=>true ,:id=>"report_name"%></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
-                      <td class="dataCol"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label for="report_auto_run_flag"><%=t(:label_irm_report_auto_run_flag)%></label></td>
-                      <td class="dataCol">
-                        <label for="display_flag"><%= f.check_box(:auto_run_flag) %></label>
-                      </td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
-                      <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
-                    </tr>
+  <% content_for :form_block_common do %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label><%=t(:label_irm_report_report_type)%></label></td>
+          <td class="data-col"><label><%=@report[:report_type_name]%></label></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
+          <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_code"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
+          <td class="data-col"><%=f.text_field :name,:value=>@report[:name], :required=>true ,:id=>"report_name"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
+          <td class="data-col"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_auto_run_flag"><%=t(:label_irm_report_auto_run_flag)%></label></td>
+          <td class="data-col">
+            <label for="display_flag"><%= f.check_box(:auto_run_flag) %></label>
+          </td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
+          <td class="data-3col" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description",:class=>"input-xlarge"%></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-                  </tbody>
-                </table>
-            </div>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:next),:class=>"btn btn-primary"%>   
+    <%= link_to t(:cancel), {:action => "show"},:class => "btn cancel" %>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:step_n, :n => @report.step.to_s) %><%= report_page_step_title[@report.step.to_i] %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help">
+            <%= t(:step_n_total_m, :n => @report.step.to_s, :m => "5") %>
+          </td>
+        </tr>
+    </table>
+    <%= error_for @report%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_irm_report_step_base_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common %>
         </div>
       </div>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "show"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
-<%end%>
+<% end %>
