--- a/app/views/irm/reports/_edit_step_4.html.erb
+++ b/app/views/irm/reports/_edit_step_4.html.erb
@@ -1,120 +1,134 @@
 <style type="text/css">
-  table.groupColumn{
+  table.group-column {
       padding-bottom: 10px;
   }
-  table.groupColumn td{
+  table.group-column td{
       padding-right: 20px;
   }
 </style>
-<%= form_for(@report,:url=>{:action=>"edit"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-  <%= render :partial => "step_header",:locals => {:step=>@report.step} %>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <h3><%= t(:label_irm_report_setup_group_column_header) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol"></td>
-                      <td class="dataCol" width="82%" colspan="3">
+<%= form_for(@report,:url=>{:action=>"edit"},:builder => CustomFormBuilder) do |f| %>
+  <%= f.hidden_field(:step) %>
+  <% content_for :form_block_common do %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"></td>
+          <td class="data-3col" colspan="3">
+              <%= f.fields_for :report_group_columns,:normal=>true do |sub_f|%>
+                <% if sub_f.object.seq_num.to_i%2==0%>
+                  <table style="margin-left:40px" class="group-column" id="groupColumn<%= sub_f.object.seq_num%>">
+                <% else %>
+                  <table  id="groupColumn<%= sub_f.object.seq_num%>" class="group-column">
+                <% end %>
+                      <tr>
+                        <th >
+                          <%= t(:label_irm_report_group_column_field)%>
+                        </th>
+                        <th >
+                          <%= t(:label_irm_report_group_column_sort_type)%>
+                        </th>
+                        <th width="100px">
+                          <%= t(:label_irm_report_group_column_group_date_type)%>
+                        </th>
+                      </tr>
+                      <tr>
+                        <td class="data-col">
+                          <%=sub_f.hidden_field(:seq_num)%>
+                          <%=sub_f.blank_select(:field_id,available_groupable_report_column(@report),{:size=>10},{:id=>"groupColumnSelect#{sub_f.object.seq_num}",:class=>"groupColumnSelect",:ref=>sub_f.object.seq_num})%>
+                        </td>
+                        <td  class="data-col">
+                          <%= sub_f.select(:sort_type,available_report_group_sort_type)%>
+                        </td>
+                        <td class="data-col">
+                          <%= sub_f.select(:group_date_type,available_report_group_date_type,{},{:disabled=>true,:id=>"groupDate#{sub_f.object.seq_num}"})%>
+                        </td>
+                      </tr>
+                  </table>
+              <%end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-                          <%= f.fields_for :report_group_columns,:normal=>true do |sub_f|%>
-                            <% if sub_f.object.seq_num.to_i%2==0%>
-                              <table style="margin-left:40px" class="groupColumn" id="groupColumn<%= sub_f.object.seq_num%>">
-                            <% else %>
-                              <table  id="groupColumn<%= sub_f.object.seq_num%>" class="groupColumn">
-                            <% end %>
-                                  <tr>
-                                    <th >
-                                      <%= t(:label_irm_report_group_column_field)%>
-                                    </th>
-                                    <th >
-                                      <%= t(:label_irm_report_group_column_sort_type)%>
-                                    </th>
-                                    <th >
-                                      <%= t(:label_irm_report_group_column_group_date_type)%>
-                                    </th>
-                                  </tr>
-                                  <tr>
-                                    <td >
-                                      <%=sub_f.hidden_field(:seq_num)%>
-                                      <%=sub_f.blank_select(:field_id,available_groupable_report_column(@report),{:size=>10},{:id=>"groupColumnSelect#{sub_f.object.seq_num}",:class=>"groupColumnSelect",:ref=>sub_f.object.seq_num})%>
-                                    </td>
-                                    <td >
-                                      <%= sub_f.select(:sort_type,available_report_group_sort_type)%>
-                                    </td>
-                                    <td >
-                                      <%= sub_f.select(:group_date_type,available_report_group_date_type,{},{:disabled=>true,:id=>"groupDate#{sub_f.object.seq_num}"})%>
-                                    </td>
-                                  </tr>
-                              </table>
-                          <%end %>
+  <% content_for :form_buttons  do %>
+     <%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"btn"} %>
+    <%= link_submit t(:next),:class=>"btn btn-primary"%>
+    <%= link_to t(:cancel), {:action => "index"},:class => "btn cancel" %>
+  <% end %>
 
-                      </td>
-                    </tr>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:step_n, :n => @report.step.to_s) %><%= report_page_step_title[@report.step.to_i] %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help">
+            <%= t(:step_n_total_m, :n => @report.step.to_s, :m => "5") %>
+          </td>
+        </tr>
+    </table>
+    <%= error_for @report%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
 
-                  </tbody>
-                </table>
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_irm_report_setup_group_column_header) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common %>
+        </div>
+
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_report_setup_group_row_header) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <table class="form-table">
+            <tbody>
+              <tr>
+                <td class="label-col"></td>
+                <td class="data-3col"  colspan="3" id="rowHeaderGroup">
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- 图形类别 -->
+        <div id="chartTypeHeader" style="padding: 0;margin: 0" >
+            <div class="sub-page-block-header">
+              <h3 class="sub-page-block-title"><%= t(:label_irm_report_chart_type) %></h3>
             </div>
-            <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-              <h3><%= t(:label_irm_report_setup_group_row_header) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol"></td>
-                      <td class="dataCol" width="82%" colspan="3" id="rowHeaderGroup">
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-            </div>
-            <div id="chartTypeHeader" class="pbSubheader tertiaryPalette">
-              <h3><%= t(:label_irm_report_chart_type) %></h3>
-            </div>
-            <div id="chartType" class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol"><%= t(:label_irm_report_chart_type) %></td>
-                      <td class="dataCol" width="82%" colspan="3">
-                        <%= f.lookup_field(:chart_type,"IRM_REPORT_CHART_TYPE") %>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+            <div class="sub-page-block-body">
+              <table class="form-table">
+                <tbody>
+                  <tr>
+                    <td class="label-col"><label><%= t(:label_irm_report_chart_type) %></label></td>
+                    <td class="data-3col" colspan="3">
+                      <%= f.lookup_field(:chart_type,"IRM_REPORT_CHART_TYPE") %>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
         </div>
       </div>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "show",:id=>@report.id} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
-<%end%>
+<% end %>
 <script type="text/javascript">
   $(function(){
       var checkGroupChart = function(){
@@ -147,6 +161,5 @@
       $("#groupColumnSelect2").trigger("change");
       $("#groupColumnSelect3").trigger("change");
       $("#groupColumnSelect4").trigger("change");
-
   });
 </script>
