--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1785,6 +1785,28 @@ table.split-table {
     }
 
 }
+//===== field and legend =====================
+.form-table fieldset {
+    border: 1px solid #dddddd;
+    border-collapse: separate;
+    *border-collapse: collapsed;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding: 5px 20px;
+    margin: 5px;
+}
+fieldset legend {
+    font-size: 12px;
+    line-height: 20px;
+    width: auto;
+    padding:1px 10px;
+    border:1px solid #dddddd;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    text-align: left!important;
+}
 
 
 //=====auto saving =====================
