--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -1,4 +1,146 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_info)) %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_identity_edit)%>&nbsp;<%= @person.login_name%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit"},:zone=>"system_content",:class=>"btn btn-primary"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+        <h3 class="sub-page-block-title"><%=t(:label_irm_person_info)%></h3>
+      </div>
+      <div class="sub-page-block-body">
+        <table class="show-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
+                <td class="data-col"><%= @person.login_name%></td>
+                <td class="label-col"><label><%=(t :label_irm_person_role)%></label></td>
+                <td class="data-col"><%=@person[:role_name]%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_person_email_address)%></label></td>
+                <td class="data-col"><%=@person.email_address%></td>
+                <td class="label-col"><label><%=t(:label_irm_person_profile)%></label></td>
+                <td class="data-col"><%=@person[:profile_name]%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_person_last_name)%></label></td>
+                <td class="data-col"><%=@person.last_name%></td>
+                <td class="label-col"><label><%=t(:label_irm_person_organization)%></label></td>
+                <td class="data-col"><%= @person[:organization_name] %></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_person_first_name)%></label></td>
+                <td class="data-col"><%=@person.first_name%></td>
+                <td class="label-col"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+                <td class="data-col"><%=@person.bussiness_phone%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><%= t(:label_irm_identity_language_code) %></td>
+                <td class="data-col"><%= @person[:language_description] %></td>
+                 <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
+                 <td class="data-col"><%=@person.fax_number%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+                <td class="data-col"><%=@person[:notification_lang_description]%></td>
+                 <td class="label-col"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+                 <td class="data-col"><%=@person.mobile_phone%></td>
+              </tr>
+              <tr>
+                 <td class="label-col"><label><%=t(:label_irm_person_notification_flag)%></label></td>
+                 <td class="data-col"><%=check_img(@person.notification_flag)%></td>
+                <td class="label-col"><label><%=t(:label_irm_person_home_phone)%></label></td>
+                <td class="data-col"><%=@person.home_phone%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+                <td class="data-col"><%=check_img(@person.vip_flag)%></td>
+                <td class="label-col"><label><%=t(:label_irm_person_home_address)%></label></td>
+                <td class="data-col"><%=@person.home_address%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+                <td class="data-col"><%=check_img(@person.assignment_availability_flag)%></td>
+                 <td class="label-col"><div></div></td>
+                <td class="data-col"><div></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_person_template_flag)%></label></td>
+                <td class="data-col"><div><%=check_img(@person.is_a?(Irm::TemplatePerson) ? "Y":"N")%></div></td>
+                 <td class="label-col"><div></div></td>
+                <td class="data-col"><div></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=t(:label_irm_person_security_flag)%></label></td>
+                <td class="data-col"><%= @person.security_flag %></td>
+                 <td class="label-col"><div></div></td>
+                <td class="data-col"><div></div></td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="sub-page-block">
+    <div class="sub-page-block-header">
+      <h3 class="sub-page-block-title"><%=t(:label_irm_person_approve_info)%></h3>
+    </div>
+    <div class="sub-page-block-body">
+      <table class="show-table">
+        <tbody>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
+            <td class="data-col"><%=@person[:delegate_name]%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_approve_request_mail)%></label></td>
+            <td class="data-col"><%=check_img(@person.approve_request_mail)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_delegate_manager)%></label></td>
+            <td class="data-col"><%=@person[:manager_name]%></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_oauth_access_client)%></h2>
+    </td>
+    <td class="page-block-button">
+
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("remote_list",{:controller=>"irm/my_info",:action=>"get_my_remote_access", :person_id => @person.id},[])%>
+  </div>
+</div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_person_info)%></h2>
+    </td>
+    <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+
+  </div>
+</div>
+
 
 <div id="ep" class="detail-block page-block">
   <div class="pbHeader">
@@ -23,88 +165,7 @@
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-              <td class="dataCol"><%= @person.login_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
-              <td class="dataCol"><%=@person[:role_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-              <td class="dataCol"><%=@person.email_address%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
-              <td class="dataCol"><%=@person[:profile_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
-              <td class="dataCol"><%=@person.last_name%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-              <td class="dataCol"><%= @person[:organization_name] %></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
-              <td class="dataCol"><%=@person.first_name%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-              <td class="dataCol">
-                <%=@person.bussiness_phone%>
-              </td>
-            </tr>
 
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= @person[:language_description] %></td>
-               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-               <td class="dataCol">
-                   <%=@person.fax_number%>
-               </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
-              <td class="dataCol"><%=@person[:notification_lang_description]%></td>
-               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-               <td class="dataCol">
-                 <%=@person.mobile_phone%>
-               </td>
-            </tr>
-            <tr>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_notification_flag)%></label>
-               </td>
-               <td class="dataCol"><%=check_img(@person.notification_flag)%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-              <td class="dataCol">
-                <%=@person.home_phone%>
-              </td>
-            </tr>
-            <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-               <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-              <td class="dataCol">
-                 <%=@person.home_address%>
-              </td>
-
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-              <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
-               <td class="labelCol"><div></div></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_template_flag)%></label></td>
-              <td class="dataCol"><div><%=check_img(@person.is_a?(Irm::TemplatePerson) ? "Y":"N")%></div></td>
-               <td class="labelCol"><div></div></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_person_security_flag)%></label></td>
-              <td class="dataCol"><%= @person.security_flag %></td>
-               <td class="labelCol"><div></div></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-        </tbody>
       </table>
     </div>
   </div>
@@ -114,21 +175,7 @@
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
-               <td class="dataCol"><%=@person[:delegate_name]%></td>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_approve_request_mail)%></label>
-               </td>
-               <td class="dataCol"><%=check_img(@person.approve_request_mail)%></td>
-             </tr>
 
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_delegate_manager)%></label></td>
-               <td class="dataCol"><%=@person[:manager_name]%></td>
-             </tr>
-        </tbody>
       </table>
     </div>
   </div>
