--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -1,142 +1,129 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_info)) %>
-<%= form_for(@person,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@person,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_identity_edit_info)%> - <%= @person.login_name%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button floatright"><%= link_to t(:cancel), {:action => "index"},:zone=>"system_content"%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
+            <td class="data-col"><%= @person.login_name%></td>
+            <td class="label-col"><label><%=(t :label_irm_person_role)%></label></td>
+            <td class="data-col"><%=@person[:role_name]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_email_address)%></label></td>
+            <td class="data-col"><%=f.text_field :email_address, :required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_profile)%></label></td>
+            <td class="data-col"><%=@person[:profile_name]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_last_name)%></label></td>
+            <td class="data-col"><%=f.text_field :last_name%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_organization)%></label></td>
+            <td class="data-col"><%= @person[:organization_name] %></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_first_name)%></label></td>
+            <td class="data-col"><%=f.text_field :first_name, :required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+            <td class="data-col"><%=f.text_field :bussiness_phone,:required=>true%></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><%= t(:label_irm_identity_language_code) %></td>
+            <td class="data-col"><%= f.select(:language_code, selectable_languages) %></td>
+             <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
+             <td class="data-col"><%=f.text_field :fax_number%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+            <td class="data-col"><%=f.select :notification_lang,selectable_languages%></td>
+             <td class="label-col"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+             <td class="data-col"><%=f.text_field :mobile_phone%></td>
+          </tr>
+          <tr>
+             <td class="label-col"><label><%=t(:label_irm_person_notification_flag)%></label></td>
+             <td class="data-col"><%=f.check_box :notification_flag%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_home_phone)%></label></td>
+            <td class="data-col"><%=f.text_field :home_phone%></td>
+          </tr>
+          <tr>
+             <td class="label-col"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+             <td class="data-col"><%=check_img(@person.vip_flag)%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_home_address)%></label></td>
+            <td class="data-col"><%=f.text_field :home_address%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+            <td class="data-col"><%=check_img(@person.assignment_availability_flag)%></td>
+             <td class="label-col"><div></div></td>
+            <td class="data-col"><div></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+             <td class="label-col"><div></div></td>
+            <td class="data-col"><div></div></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
+  <% end %>
+    
+  <% content_for :form_block_approve do %>
+    <table class="form-table">
+      <tbody>
+           <tr>
+             <td class="label-col"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
+             <td class="data-col"><%=f.blank_select(:delegate_approver,available_person)%></td>
+             <td class="label-col"><label><%=t(:label_irm_person_approve_request_mail)%></label></td>
+             <td class="data-col"><%=f.check_box :approve_request_mail%></td>
+           </tr>
+      </tbody>
+    </table>      
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"},:zone=>"system_content",:class=>"btn cancel"%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_identity_edit_info)%> - <%= @person.login_name%></h2></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
     <%= error_for @person %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+      
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_person_approve_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_approve   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-              <td class="dataCol"><%= @person.login_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
-              <td class="dataCol"><%=@person[:role_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-              <td class="dataCol"><%=f.text_field :email_address, :required=>true%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
-              <td class="dataCol"><%=@person[:profile_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :last_name%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-              <td class="dataCol"><%= @person[:organization_name] %></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-              <td class="dataCol">
-                <%=f.text_field :bussiness_phone,:required=>true%>
-              </td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
-               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-               <td class="dataCol">
-                   <%=f.text_field :fax_number%>
-               </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
-              <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
-               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-               <td class="dataCol">
-                 <%=f.text_field :mobile_phone%>
-               </td>
-            </tr>
-            <tr>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_notification_flag)%></label>
-               </td>
-               <td class="dataCol"><%=f.check_box :notification_flag%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-              <td class="dataCol">
-                <%=f.text_field :home_phone%>
-              </td>
-            </tr>
-            <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-               <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
-              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-              <td class="dataCol">
-                 <%=f.text_field :home_address%>
-              </td>
-
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-              <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
-               <td class="labelCol"><div></div></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-               <td class="labelCol"><div></div></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <div id="head_3_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_irm_person_approve_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
-               <td class="dataCol"><%=f.blank_select(:delegate_approver,available_person)%></td>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_approve_request_mail)%></label>
-               </td>
-               <td class="dataCol"><%=f.check_box :approve_request_mail%></td>
-             </tr>
-        </tbody>
-      </table>
-    </div>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button floatright"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
