--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -1,6 +1,6 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_info)) %>
 <!--页面结构-->
-<div class="show-block">
+<div class="page-block">
   <table class="page-block-header"><tr>
     <td class="page-block-title">
       <h2 class="block-title"><%=t(:label_irm_identity_edit)%>&nbsp;<%= @person.login_name%></h2>
@@ -110,7 +110,6 @@
       </table>
     </div>
   </div>
-
 </div>
 
 <!--页面结构-->
@@ -128,173 +127,29 @@
   </div>
 </div>
 
-<!--页面结构-->
+<!--可访问系统-->
 <div class="page-block">
   <table class="page-block-header"><tr>
     <td class="page-block-title">
-      <h2 class="block-title"><%=t(:label_irm_person_info)%></h2>
+      <h2 class="block-title"><%=t(:label_irm_person_access_system)%></h2>
     </td>
     <td class="page-block-button"></td>
   </tr></table>
   <div class="page-block-body">
-
+    <%= datatable("person_system_list",{:controller=>"irm/people",:action=>"get_owned_external_systems", :person_id => @person.id},[],{:force_html=>true})%>
   </div>
 </div>
-
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_identity_edit)%>&nbsp;<%= @person.login_name%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-          <div class="button"><%= link_to t(:edit), {:action => "edit"},:zone=>"system_content"%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<!--所属组-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_person_group)%></h2>
+    </td>
+    <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("support_group",{:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id},[],{:force_html=>true})%>
   </div>
-  <div class="pbBody">
-    <%= error_for @person%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-
-      </span>
-      <h3><%=t(:label_irm_person_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-
-      </table>
-    </div>
-  </div>
-  <div class="pbBody">
-    <div id="head_3_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_irm_person_approve_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-
-      </table>
-    </div>
-  </div>
-</div>
-
-<!-- 远程登录信息 -->
-<div id="id_remove_access" class="bRelatedList">
-    <a name="id_remove_access_target"></a>
-    <div class="listRelatedObject setupBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3 id="id_remove_access_title"><%=t(:label_irm_oauth_access_client)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="id_remote_access_list" class="pbBody">
-          <div id="remote_list" class="datatable" style="width:100%;"></div>
-          <!-- Begin company access table -->
-            <%= datatable("remote_list",{:controller=>"irm/my_info",:action=>"get_my_remote_access", :person_id => @person.id},
-                              [{:key=>"id",:label=>t(:operation),:hidden => true},
-                               {:key=>"ip_address",:label=>t(:label_irm_oauth_access_ip), :width=>"200px"},
-                               {:key=>"created_at",:label=>t(:label_irm_oauth_access_created), :width=>"200px"},
-                               {:key=>"updated_at",:label=>t(:label_irm_oauth_access_updated), :width=> "200px"},
-                               {:key=>"times", :label=>t(:label_irm_oauth_access_num)}],{:force_html=>true})%>
-          <!-- End company access table -->
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
-<!-- -->
-
-<div id="id_person_system_access" class="bRelatedList">
-    <a name="id_person_system_access_target"></a>
-    <div class="listRelatedObject setupBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3 id="id_person_system_access_title"><%=t(:label_irm_person_access_system)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="id_system_access" class="pbBody">
-          <div id="person_system_list" class="datatable" style="width:100%;">
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("person_system_list",{:controller=>"irm/people",:action=>"get_owned_external_systems", :person_id => @person.id},
-                              [{:key=>"id",:label=>t(:operation),:hidden => true},
-                               {:key=>"system_name",:label=>t(:label_irm_external_system), :width=>"200px"},
-                               {:key=>"system_description",:label=>t(:description), :width=> "400px"},
-                               {:key=>"external_system_code", :hidden => true}],{:force_html=>true})%>
-          <!-- End company access table -->
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
-
-<div id="id_person_support_group" class="bRelatedList">
-    <a name="id_person_support_group_target">
-    </a>
-    <div class="listRelatedObject setupBlock">
-      <div class="page-block secondary-palette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3 id="id_person_support_group_title"><%=t(:label_irm_person_group)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="id_support_group" class="pbBody lbBody">
-          <div id="support_group" class="datatable" style="width:100%;">
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("support_group",{:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id,:format=>:json},
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:hidden=>true,:width=>"60px"},
-                               {:key=>"name",:label=>t(:label_irm_group_name)},
-                               {:key=>"description",:label=>t(:label_irm_group_description)}],{:force_html=>true})%>
-          <!-- End company access table -->
-        </div>
-        <div class="pbFooter secondary-palette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
 </div>
 
 
