修改我的头像页面样式修改

--- a/app/views/irm/common/_crop.html.erb
+++ b/app/views/irm/common/_crop.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag source.avatar.url(:original), :id => "crop_box" %>
-<% require_javascript(:jcrop) %>
-<% require_css(:jcrop) %>
+<% require_jscss(:jcrop) %>
+<% require_jcss(:jcrop_ie6) if ie6? %>
 <script type="text/javascript">
   $(function(){
       function onChange(crop){
