--- a/app/views/irm/my_avatar/edit.html.erb
+++ b/app/views/irm/my_avatar/edit.html.erb
@@ -1,35 +1,57 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_avatar)) %>
-<%= form_for(@person,:url=>{:action=>"update", :controller => "irm/my_avatar", :id => @person.id}, :html => {:multipart => true}, :builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@person,:url=>{:action=>"update", :controller => "irm/my_avatar", :id => @person.id}, :html => {:multipart => true}, :builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_person_avatar_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:controller => "irm/my_avatar", :action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_irm_person_avatar_new)%></label></td>
+            <td class="data-2col"><%= f.file_field :avatar%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_irm_person_avatar_current)%></label></td>
+            <td class="data-2col"><%= image_tag @person.avatar.url(:large)%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:controller => "irm/my_avatar", :action => "index"},:class => "btn cancel"%>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_person_avatar_edit)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
     <%= error_for @person %>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_person_avatar_new)%></td>
-              <td class="data2Col"><%= f.file_field :avatar%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_person_avatar_current)%></td>
-              <td class="data2Col"><%= image_tag @person.avatar.url(:large)%></td>
-            </tr>
-        </tbody>
-      </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_person_avatar_edit)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+
     </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-</div>
+
 <% end %>
