--- a/app/views/irm/my_avatar/index.html.erb
+++ b/app/views/irm/my_avatar/index.html.erb
@@ -1,31 +1,24 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_avatar)) %>
-
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_person_avatar) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:edit) + t(:label_irm_person_avatar), {:action => "edit"}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div class="pbSubsection">
-          <table style="width:100%;" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td style="padding-left: 30%"><%= image_tag Irm::Person.current.avatar.url(:large)%></td>
-                </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_person_avatar) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit) + t(:label_irm_person_avatar), {:action => "edit"},:class=>"btn btn-primary"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table style="width: 100%;">
+      <tbody>
+        <tr>
+          <td style="padding-left: 30%"><%= image_tag Irm::Person.current.avatar.url(:large)%></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
